trying to fix row height on mobile

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -75,6 +75,10 @@
   display: none;
 }
 
+.upload-row {
+  min-height: 30rem;
+}
+
 .upload-logbook-btn {
   width: 5.7rem;
 }
